// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Select /> Generated Snapshots AdjustedWidth story renders snapshot 1`] = `
<div
  class="select w-60"
  data-headlessui-state="open"
  data-testid="dropdown"
>
  <div
    class="select__overline"
  >
    <label
      class="select__label"
      data-headlessui-state="open"
      id="headlessui-listbox-label-:r18:"
    >
      Favorite Animal
    </label>
  </div>
  <button
    aria-controls="headlessui-listbox-options-:r1a:"
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-labelledby="headlessui-listbox-label-:r18: headlessui-listbox-button-:r19:"
    class="select-button"
    data-headlessui-state="open"
    id="headlessui-listbox-button-:r19:"
    type="button"
  >
    <span>
      Dogs
    </span>
    <svg
      aria-hidden="true"
      class="icon select-button__icon select-button__icon--reversed"
      fill="currentColor"
      height="1.25rem"
      style="--icon-size: 1.25rem;"
      viewBox="0 0 24 24"
      width="1.25rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
      />
    </svg>
  </button>
</div>
`;

exports[`<Select /> Generated Snapshots Default story renders snapshot 1`] = `
<div
  class="select"
  data-headlessui-state="open"
  data-testid="dropdown"
>
  <div
    class="select__overline"
  >
    <label
      class="select__label"
      data-headlessui-state="open"
      id="headlessui-listbox-label-:r0:"
    >
      Favorite Animal
    </label>
  </div>
  <button
    aria-controls="headlessui-listbox-options-:r2:"
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-labelledby="headlessui-listbox-label-:r0: headlessui-listbox-button-:r1:"
    class="select-button"
    data-headlessui-state="open"
    id="headlessui-listbox-button-:r1:"
    type="button"
  >
    <span>
      Dogs
    </span>
    <svg
      aria-hidden="true"
      class="icon select-button__icon select-button__icon--reversed"
      fill="currentColor"
      height="1.25rem"
      style="--icon-size: 1.25rem;"
      viewBox="0 0 24 24"
      width="1.25rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
      />
    </svg>
  </button>
</div>
`;

exports[`<Select /> Generated Snapshots Multiple story renders snapshot 1`] = `
<div
  class="select w-60"
  data-headlessui-state="open"
  data-testid="dropdown"
>
  <div
    class="select__overline"
  >
    <label
      class="select__label"
      data-headlessui-state="open"
      id="headlessui-listbox-label-:r12:"
    >
      Favorite Animal(s)
    </label>
  </div>
  <button
    aria-controls="headlessui-listbox-options-:r14:"
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-labelledby="headlessui-listbox-label-:r12: headlessui-listbox-button-:r13:"
    class="select-button"
    data-headlessui-state="open"
    id="headlessui-listbox-button-:r13:"
    type="button"
  >
    <span>
      1
       selected
    </span>
    <svg
      aria-hidden="true"
      class="icon select-button__icon select-button__icon--reversed"
      fill="currentColor"
      height="1.25rem"
      style="--icon-size: 1.25rem;"
      viewBox="0 0 24 24"
      width="1.25rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
      />
    </svg>
  </button>
</div>
`;

exports[`<Select /> Generated Snapshots NoVisibleLabel story renders snapshot 1`] = `
<div
  class="select"
  data-headlessui-state="open"
  data-testid="dropdown"
>
  <button
    aria-controls="headlessui-listbox-options-:r1f:"
    aria-expanded="true"
    aria-haspopup="listbox"
    class="select-button"
    data-headlessui-state="open"
    id="headlessui-listbox-button-:r1e:"
    type="button"
  >
    <span>
      Dogs
    </span>
    <svg
      aria-hidden="true"
      class="icon select-button__icon select-button__icon--reversed"
      fill="currentColor"
      height="1.25rem"
      style="--icon-size: 1.25rem;"
      viewBox="0 0 24 24"
      width="1.25rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
      />
    </svg>
  </button>
</div>
`;

exports[`<Select /> Generated Snapshots StyledUncontrolled story renders snapshot 1`] = `
<div
  class="select"
  data-headlessui-state="open"
  data-testid="dropdown"
>
  <button
    aria-controls="headlessui-listbox-options-:ru:"
    aria-expanded="true"
    aria-haspopup="listbox"
    class="select-button"
    data-headlessui-state="open"
    id="headlessui-listbox-button-:rt:"
    type="button"
  >
    <span>
      Dogs
    </span>
    <svg
      aria-hidden="true"
      class="icon select-button__icon select-button__icon--reversed"
      fill="currentColor"
      height="1.25rem"
      style="--icon-size: 1.25rem;"
      viewBox="0 0 24 24"
      width="1.25rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
      />
    </svg>
  </button>
</div>
`;

exports[`<Select /> Generated Snapshots UncontrolledHeadless story renders snapshot 1`] = `
<div
  class="select"
  data-headlessui-state="open"
  data-testid="dropdown"
>
  <button
    aria-controls="headlessui-listbox-options-:rp:"
    aria-expanded="true"
    aria-haspopup="listbox"
    class="fpo"
    data-headlessui-state="open"
    id="headlessui-listbox-button-:ro:"
    type="button"
  >
    Dogs
  </button>
</div>
`;

exports[`<Select /> Generated Snapshots UsingFunctionProps story renders snapshot 1`] = `
<div
  aria-label="Favorite Animal"
  class="select"
  data-headlessui-state="open"
  data-testid="dropdown"
>
  <button
    aria-controls="headlessui-listbox-options-:r1k:"
    aria-expanded="true"
    aria-haspopup="listbox"
    class="fpo"
    data-headlessui-state="open"
    id="headlessui-listbox-button-:r1j:"
    type="button"
  >
    Select
    <svg
      aria-hidden="true"
      class="icon ml-4"
      fill="currentColor"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M11 18h2c.55 0 1-.45 1-1s-.45-1-1-1h-2c-.55 0-1 .45-1 1s.45 1 1 1zM3 7c0 .55.45 1 1 1h16c.55 0 1-.45 1-1s-.45-1-1-1H4c-.55 0-1 .45-1 1zm4 6h10c.55 0 1-.45 1-1s-.45-1-1-1H7c-.55 0-1 .45-1 1s.45 1 1 1z"
      />
    </svg>
  </button>
</div>
`;

exports[`<Select /> Generated Snapshots WithFieldName story renders snapshot 1`] = `
<div
  class="select"
  data-headlessui-state="open"
  data-testid="dropdown"
>
  <div
    class="select__overline"
  >
    <label
      class="select__label"
      data-headlessui-state="open"
      id="headlessui-listbox-label-:ri:"
    >
      Favorite Animal
    </label>
  </div>
  <button
    aria-controls="headlessui-listbox-options-:rk:"
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-labelledby="headlessui-listbox-label-:ri: headlessui-listbox-button-:rj:"
    class="select-button"
    data-headlessui-state="open"
    id="headlessui-listbox-button-:rj:"
    type="button"
  >
    <span>
      Dogs
    </span>
    <svg
      aria-hidden="true"
      class="icon select-button__icon select-button__icon--reversed"
      fill="currentColor"
      height="1.25rem"
      style="--icon-size: 1.25rem;"
      viewBox="0 0 24 24"
      width="1.25rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
      />
    </svg>
  </button>
</div>
`;

exports[`<Select /> Generated Snapshots WithSelectedOption story renders snapshot 1`] = `
<div
  class="select"
  data-headlessui-state="open"
  data-testid="dropdown"
>
  <div
    class="select__overline"
  >
    <label
      class="select__label"
      data-headlessui-state="open"
      id="headlessui-listbox-label-:rc:"
    >
      Favorite Animal
    </label>
  </div>
  <button
    aria-controls="headlessui-listbox-options-:re:"
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-labelledby="headlessui-listbox-label-:rc: headlessui-listbox-button-:rd:"
    class="select-button"
    data-headlessui-state="open"
    id="headlessui-listbox-button-:rd:"
    type="button"
  >
    <span>
      Cats
    </span>
    <svg
      aria-hidden="true"
      class="icon select-button__icon select-button__icon--reversed"
      fill="currentColor"
      height="1.25rem"
      style="--icon-size: 1.25rem;"
      viewBox="0 0 24 24"
      width="1.25rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
      />
    </svg>
  </button>
</div>
`;

exports[`<Select /> Generated Snapshots WithStandardButton story renders snapshot 1`] = `
<div
  class="select"
  data-headlessui-state="open"
  data-testid="dropdown"
>
  <div
    class="select__overline"
  >
    <label
      class="select__label"
      data-headlessui-state="open"
      id="headlessui-listbox-label-:r6:"
    >
      Favorite Animal
    </label>
  </div>
  <button
    aria-controls="headlessui-listbox-options-:r8:"
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-labelledby="headlessui-listbox-label-:r6: headlessui-listbox-button-:r7:"
    class="select-button"
    data-headlessui-state="open"
    id="headlessui-listbox-button-:r7:"
    type="button"
  >
    <span>
      - Select Option -
    </span>
    <svg
      aria-hidden="true"
      class="icon select-button__icon select-button__icon--reversed"
      fill="currentColor"
      height="1.25rem"
      style="--icon-size: 1.25rem;"
      viewBox="0 0 24 24"
      width="1.25rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
      />
    </svg>
  </button>
</div>
`;
